fixing contrast and font-size issues

--- a/style.css
+++ b/style.css
@@ -678,7 +678,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;
 }
 
 .tight-width-whitespace {
@@ -740,6 +740,10 @@ h4 {
     color: #FFFFFF!important;
 }
 
+.dark {
+    color: #333!important;
+}
+
 .testimonial-text {
     font-size: 20px;
     font-style: italic;
@@ -790,12 +794,13 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #333!important;
+    letter-spacing: 2px;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #222!important;
 }
 
 .ltc-white {
